--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Hello Rigo with Vanilla.js</title>
   </head>
   <body>
+    <!-- React meterea todo el DOM creado -->
     <div id="root"></div>
+
+    <!-- Apunta al entry point de la web -->
     <script type="module" src="/src/js/main.jsx"></script>
   </body>
 </html>
